shaders.properties descriptions

--- a/src/content/docs/reference/Shaders.Properties/allowConcurrentCompute.mdx
+++ b/src/content/docs/reference/Shaders.Properties/allowConcurrentCompute.mdx
@@ -1,6 +1,6 @@
 ---
 title: allowConcurrentCompute
-description: allowConcurrentCompute
+description: Enables concurrent compute passes.
 sidebar:
   label: allowConcurrentCompute
   order: 4
