--- a/src/content/docs/reference/Shaders.Properties/alphaTest.mdx
+++ b/src/content/docs/reference/Shaders.Properties/alphaTest.mdx
@@ -1,6 +1,6 @@
 ---
 title: alphaTest
-description: alphaTest
+description: Used to control the alpha test for cutout programs.
 sidebar:
   label: alphaTest
   order: 3
