--- a/src/content/docs/reference/Shaders.Properties/backFace.mdx
+++ b/src/content/docs/reference/Shaders.Properties/backFace.mdx
@@ -1,6 +1,6 @@
 ---
 title: backFace
-description: backFace
+description: Enables or disables back-face culling for each type of rendering.
 sidebar:
   label: backFace
   order: 3
