--- a/src/content/docs/reference/Shaders.Properties/beacon_beam_depth.mdx
+++ b/src/content/docs/reference/Shaders.Properties/beacon_beam_depth.mdx
@@ -1,6 +1,6 @@
 ---
 title: beacon.beam.depth
-description: beacon.beam.depth
+description: Sets whether beacon beams write to the depth buffer..
 sidebar:
   label: beacon.beam.depth
   order: 3
