--- a/src/content/docs/reference/Shaders.Properties/blend.mdx
+++ b/src/content/docs/reference/Shaders.Properties/blend.mdx
@@ -1,6 +1,6 @@
 ---
 title: blend
-description: blend
+description: Controls the alpha blending for a specific gbuffers program, and optionally per-buffer.
 sidebar:
   label: blend
   order: 3
