--- a/src/content/docs/reference/Shaders.Properties/buffer_flip.mdx
+++ b/src/content/docs/reference/Shaders.Properties/buffer_flip.mdx
@@ -1,6 +1,6 @@
 ---
 title: flip
-description: flip
+description: Enable or disable buffer flipping for a colortex buffer.
 sidebar:
   label: flip
   order: 3
