--- a/src/content/docs/reference/Shaders.Properties/buffer_size.mdx
+++ b/src/content/docs/reference/Shaders.Properties/buffer_size.mdx
@@ -1,6 +1,6 @@
 ---
 title: size.buffer
-description: size.buffer
+description: Sets the resolution of a colortex buffer.
 sidebar:
   label: size.buffer
   order: 3
