--- a/src/content/docs/reference/Shaders.Properties/clouds.mdx
+++ b/src/content/docs/reference/Shaders.Properties/clouds.mdx
@@ -1,6 +1,6 @@
 ---
 title: clouds
-description: clouds
+description: Enables or disables vanilla cloud rendering.
 sidebar:
   label: clouds
   order: 3
