--- a/src/content/docs/reference/Shaders.Properties/custom_uniforms.mdx
+++ b/src/content/docs/reference/Shaders.Properties/custom_uniforms.mdx
@@ -1,6 +1,6 @@
 ---
 title: Custom Uniforms
-description: Custom Uniforms
+description: Iris lets you define custom uniforms which are evaluated on the CPU and uploaded on program change.
 sidebar:
   label: Custom Uniforms
   order: 3
