--- a/src/content/docs/reference/Shaders.Properties/frustum_culling.mdx
+++ b/src/content/docs/reference/Shaders.Properties/frustum_culling.mdx
@@ -1,6 +1,6 @@
 ---
 title: frustum.culling
-description: frustum.culling
+description: Enables or disables frustum culling.
 sidebar:
   label: frustum.culling
   order: 3
