--- a/src/content/docs/reference/Shaders.Properties/indirect_pass.mdx
+++ b/src/content/docs/reference/Shaders.Properties/indirect_pass.mdx
@@ -1,6 +1,6 @@
 ---
 title: indirect.pass
-description: indirect.pass
+description: Allows you to dispatch a compute shader with the work group amount specified from a SSBO.
 sidebar:
   label: indirect.pass
   order: 4
