--- a/src/content/docs/reference/Shaders.Properties/lang_file.mdx
+++ b/src/content/docs/reference/Shaders.Properties/lang_file.mdx
@@ -1,6 +1,6 @@
 ---
 title: .lang file
-description: .lang file
+description: .lang files can be added for any supported languages to add use friendly labels and tooltips to shader options.
 sidebar:
   label: .lang file
   order: 2
