--- a/src/content/docs/reference/Shaders.Properties/moon.mdx
+++ b/src/content/docs/reference/Shaders.Properties/moon.mdx
@@ -1,6 +1,6 @@
 ---
 title: moon
-description: moon
+description: Enables or disables rendering of the moon texture in gbuffers_skytextured.
 sidebar:
   label: moon
   order: 3
@@ -10,4 +10,4 @@ sidebar:
 
 #### Location: shaders.properties
 
-Enables or disables rendering of the moon texture in gbuffers_skytextured.
+Enables or disables rendering of the moon texture in `gbuffers_skytextured`.
