--- a/src/content/docs/reference/Shaders.Properties/occlusion_culling.mdx
+++ b/src/content/docs/reference/Shaders.Properties/occlusion_culling.mdx
@@ -1,6 +1,6 @@
 ---
 title: occlusion.culling
-description: occlusion.culling
+description: Enables or disables occlusion culling, which culls geometry which is behind other opaque geometry.
 sidebar:
   label: occlusion.culling
   order: 4
