--- a/src/content/docs/reference/Shaders.Properties/oldHandLight.mdx
+++ b/src/content/docs/reference/Shaders.Properties/oldHandLight.mdx
@@ -1,6 +1,6 @@
 ---
 title: oldHandLight
-description: oldHandLight
+description: Sets heldBlockLightValue to use whichever hand's value is higher.
 sidebar:
   label: oldHandLight
   order: 3
