--- a/src/content/docs/reference/Shaders.Properties/oldLighting.mdx
+++ b/src/content/docs/reference/Shaders.Properties/oldLighting.mdx
@@ -1,6 +1,6 @@
 ---
 title: oldLighting
-description: oldLighting
+description: Enables the "old lighting", which applies a lighting multiplier in the color attribute based on the block's orientation.
 sidebar:
   label: oldLighting
   order: 3
