--- a/src/content/docs/reference/Shaders.Properties/overview.mdx
+++ b/src/content/docs/reference/Shaders.Properties/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Overview: shaders.properties"
-description: Overview
+description: Shaders.properties is a text file placed in the `shaders` folder that allows for configuring many options of a shaderpack.
 sidebar:
   label: Overview
   order: 1
