--- a/src/content/docs/reference/Shaders.Properties/particles_before_deferred.mdx
+++ b/src/content/docs/reference/Shaders.Properties/particles_before_deferred.mdx
@@ -1,6 +1,6 @@
 ---
 title: particles.before.deferred
-description: particles.before.deferred
+description: Controls whether particles are rendered before or after the deferred pass.
 sidebar:
   label: particles.before.deferred
   order: 3
