--- a/src/content/docs/reference/Shaders.Properties/particles_ordering.mdx
+++ b/src/content/docs/reference/Shaders.Properties/particles_ordering.mdx
@@ -1,6 +1,6 @@
 ---
 title: particles.ordering
-description: particles.ordering
+description: Controls how particles will be rendered.
 sidebar:
   label: particles.ordering
   order: 4
