--- a/src/content/docs/reference/Shaders.Properties/profile.mdx
+++ b/src/content/docs/reference/Shaders.Properties/profile.mdx
@@ -1,6 +1,6 @@
 ---
 title: profile
-description: profile
+description: Allows defining of profiles, which are preconfigured sets of user options selectable through a <profile> button in the "Shader Pack Settings" screen.
 sidebar:
   label: profile
   order: 2
