--- a/src/content/docs/reference/Shaders.Properties/program_enabled.mdx
+++ b/src/content/docs/reference/Shaders.Properties/program_enabled.mdx
@@ -1,6 +1,6 @@
 ---
 title: program.enabled
-description: program.enabled
+description: Allows programs to be disabled based on shader options.
 sidebar:
   label: program.enabled
   order: 3
