--- a/src/content/docs/reference/Shaders.Properties/rain_depth.mdx
+++ b/src/content/docs/reference/Shaders.Properties/rain_depth.mdx
@@ -1,6 +1,6 @@
 ---
 title: rain.depth
-description: rain.depth
+description: Whether rain and snow should write to the depth buffer.
 sidebar:
   label: rain.depth
   order: 3
