--- a/src/content/docs/reference/Shaders.Properties/scale.mdx
+++ b/src/content/docs/reference/Shaders.Properties/scale.mdx
@@ -1,6 +1,6 @@
 ---
 title: scale
-description: scale
+description: Defines a new viewport for a composite style program.
 sidebar:
   label: scale
   order: 3
