--- a/src/content/docs/reference/Shaders.Properties/screen.mdx
+++ b/src/content/docs/reference/Shaders.Properties/screen.mdx
@@ -1,6 +1,6 @@
 ---
 title: screen
-description: screen
+description: Controls which shader options are displayed in the "Shader Pack Settings" screen and how they are displayed.
 sidebar:
   label: screen
   order: 2
