--- a/src/content/docs/reference/Shaders.Properties/separateAo.mdx
+++ b/src/content/docs/reference/Shaders.Properties/separateAo.mdx
@@ -1,6 +1,6 @@
 ---
 title: separateAo
-description: separateAo
+description: Controls whether vanilla AO is stored in the RGB or A components of the color vertex attribute.
 sidebar:
   label: separateAo
   order: 3
