--- a/src/content/docs/reference/Shaders.Properties/separateEntityDraws.mdx
+++ b/src/content/docs/reference/Shaders.Properties/separateEntityDraws.mdx
@@ -1,6 +1,6 @@
 ---
 title: separateEntityDraws
-description: separateEntityDraws
+description: Controls whether translucent entities/block entities are drawn before or after the deferred pass.
 sidebar:
   label: separateEntityDraws
   order: 4
