--- a/src/content/docs/reference/Shaders.Properties/shadowBlockEntities.mdx
+++ b/src/content/docs/reference/Shaders.Properties/shadowBlockEntities.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowBlockEntities
-description: shadowBlockEntities
+description: Sets whether block entities are rendered in the shadow pass.
 sidebar:
   label: shadowBlockEntities
   order: 3
