--- a/src/content/docs/reference/Shaders.Properties/shadowEntities.mdx
+++ b/src/content/docs/reference/Shaders.Properties/shadowEntities.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowEntities
-description: shadowEntities
+description: Sets whether entities are rendered in the shadow pass.
 sidebar:
   label: shadowEntities
   order: 3
