--- a/src/content/docs/reference/Shaders.Properties/shadowPlayer.mdx
+++ b/src/content/docs/reference/Shaders.Properties/shadowPlayer.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowPlayer
-description: shadowPlayer
+description: Sets whether the player is rendered in the shadow pass.
 sidebar:
   label: shadowPlayer
   order: 4
