--- a/src/content/docs/reference/Shaders.Properties/shadowTerrain.mdx
+++ b/src/content/docs/reference/Shaders.Properties/shadowTerrain.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowTerrain
-description: shadowTerrain
+description: Sets whether terrain is rendered in the shadow pass.
 sidebar:
   label: shadowTerrain
   order: 3
