--- a/src/content/docs/reference/Shaders.Properties/shadowTranslucent.mdx
+++ b/src/content/docs/reference/Shaders.Properties/shadowTranslucent.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowTranslucent
-description: shadowTranslucent
+description: Sets whether translucent terrain is rendered in the shadow pass.
 sidebar:
   label: shadowTranslucent
   order: 3
