--- a/src/content/docs/reference/Shaders.Properties/shadow_culling.mdx
+++ b/src/content/docs/reference/Shaders.Properties/shadow_culling.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadow.culling
-description: shadow.culling
+description: Controls culling in the shadow pass.
 sidebar:
   label: shadow.culling
   order: 3
