--- a/src/content/docs/reference/Shaders.Properties/skipAllRendering.mdx
+++ b/src/content/docs/reference/Shaders.Properties/skipAllRendering.mdx
@@ -1,6 +1,6 @@
 ---
 title: skipAllRendering
-description: skipAllRendering
+description: Enables or disables most gbuffers passes.
 sidebar:
   label: skipAllRendering
   order: 4
