--- a/src/content/docs/reference/Shaders.Properties/sliders.mdx
+++ b/src/content/docs/reference/Shaders.Properties/sliders.mdx
@@ -1,6 +1,6 @@
 ---
 title: sliders
-description: sliders
+description: Controls which shader options should be displayed as sliders.
 sidebar:
   label: sliders
   order: 2
