--- a/src/content/docs/reference/Shaders.Properties/sun.mdx
+++ b/src/content/docs/reference/Shaders.Properties/sun.mdx
@@ -1,6 +1,6 @@
 ---
 title: sun
-description: sun
+description: Enables or disables rendering of the sun texture in gbuffers_skytextured.
 sidebar:
   label: sun
   order: 3
