--- a/src/content/docs/reference/Shaders.Properties/supportsColorCorrection.mdx
+++ b/src/content/docs/reference/Shaders.Properties/supportsColorCorrection.mdx
@@ -1,6 +1,6 @@
 ---
 title: supportsColorCorrection
-description: supportsColorCorrection
+description: Allows the shader to perform its own conversion to a different colour space.
 sidebar:
   label: supportsColorCorrection
   order: 4
