--- a/src/content/docs/reference/Shaders.Properties/underwaterOverlay.mdx
+++ b/src/content/docs/reference/Shaders.Properties/underwaterOverlay.mdx
@@ -1,6 +1,6 @@
 ---
 title: underwaterOverlay
-description: underwaterOverlay
+description: Enables or disables the water texture overlay when the player is underwater.
 sidebar:
   label: underwaterOverlay
   order: 3
