--- a/src/content/docs/reference/Shaders.Properties/vignette.mdx
+++ b/src/content/docs/reference/Shaders.Properties/vignette.mdx
@@ -1,6 +1,6 @@
 ---
 title: vignette
-description: vignette
+description: Enables or disables rendering of the vignette overlay.
 sidebar:
   label: vignette
   order: 3
