--- a/src/content/docs/reference/Shaders.Properties/voxelizeLightBlocks.mdx
+++ b/src/content/docs/reference/Shaders.Properties/voxelizeLightBlocks.mdx
@@ -1,6 +1,6 @@
 ---
 title: voxelizeLightBlocks
-description: voxelizeLightBlocks
+description: Renders light blocks as an invisible quad so that they can be voxelised.
 sidebar:
   label: voxelizeLightBlocks
   order: 4
