--- a/src/content/docs/reference/Shaders.Properties/flags.mdx
+++ b/src/content/docs/reference/Shaders.Properties/flags.mdx
@@ -1,6 +1,6 @@
 ---
 title: Feature Flags
-description: Feature Flags
+description: Feature flags are an Iris system to query the activation state of certain features.
 sidebar:
   label: Feature Flags
   order: 5
