--- a/src/content/docs/reference/Programs/composite.mdx
+++ b/src/content/docs/reference/Programs/composite.mdx
@@ -1,6 +1,6 @@
 ---
 title: composite
-description: Composite Programs
+description: Runs after all gbuffers programs.
 sidebar:
   label: composite
   order: 9
