--- a/src/content/docs/reference/Programs/deferred.mdx
+++ b/src/content/docs/reference/Programs/deferred.mdx
@@ -1,6 +1,6 @@
 ---
 title: deferred
-description: Deferred Programs
+description: Runs after (most) opaque gbuffers programs but before (most) translucent gbuffers programs.
 sidebar:
   label: deferred
   order: 8
