--- a/src/content/docs/reference/Programs/final.mdx
+++ b/src/content/docs/reference/Programs/final.mdx
@@ -1,6 +1,6 @@
 ---
 title: final
-description: Final Program
+description: Runs after all other shader programs.
 sidebar:
   label: final
   order: 10
