--- a/src/content/docs/reference/Programs/gbuffers.mdx
+++ b/src/content/docs/reference/Programs/gbuffers.mdx
@@ -1,6 +1,6 @@
 ---
 title: Gbuffers
-description: Gbuffers Programs
+description: Where all the world geometry is rendered, including terrain, entities, block entities, particles, and more.
 sidebar:
   label: gbuffers
   order: 7
