--- a/src/content/docs/reference/Programs/overview.mdx
+++ b/src/content/docs/reference/Programs/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Overview: programs"
-description: Overview
+description: Shader programs contain the code used by the GPU to render the graphics.
 sidebar:
   label: Overview
   order: 1
