--- a/src/content/docs/reference/Programs/prepare.mdx
+++ b/src/content/docs/reference/Programs/prepare.mdx
@@ -1,6 +1,6 @@
 ---
 title: prepare
-description: Prepare Programs
+description: Runs after the shadow pass but before the gbuffers programs.
 sidebar:
   label: prepare
   order: 6
