--- a/src/content/docs/reference/Programs/setup.mdx
+++ b/src/content/docs/reference/Programs/setup.mdx
@@ -1,6 +1,6 @@
 ---
 title: setup
-description: Setup Program
+description: A compute only pass which runs when the shader is loaded or the screen is resized.
 sidebar:
   label: setup
   order: 2
