--- a/src/content/docs/reference/Programs/shadow.mdx
+++ b/src/content/docs/reference/Programs/shadow.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadow
-description: Shadow Programs
+description: Renders world geometry into the shadow buffers from the perspective of the sun/moon, intended for use in shadow mapping.
 sidebar:
   label: shadow
   order: 4
