--- a/src/content/docs/reference/Programs/shadow_comp.mdx
+++ b/src/content/docs/reference/Programs/shadow_comp.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowcomp
-description: Shadowcomp Programs
+description: Runs after the shadow pass and writes to shadowcolor buffers.
 sidebar:
   label: shadowcomp
   order: 5
