absolutely nothing to see here

--- a/src/content/docs/reference/Constants/ambientOcclusionLevel.mdx
+++ b/src/content/docs/reference/Constants/ambientOcclusionLevel.mdx
@@ -1,6 +1,6 @@
 ---
 title: ambientOcclusionLevel
-description: ambientOcclusionLevel
+description: Sets the amount of vanilla ambient occlusion that is applied through the color vertex attribute.
 sidebar:
   label: ambientOcclusionLevel
   order: 3
