--- a/src/content/docs/reference/Constants/buffer_clear.mdx
+++ b/src/content/docs/reference/Constants/buffer_clear.mdx
@@ -1,6 +1,6 @@
 ---
 title: Buffer Clear
-description: Buffer Clear
+description: Sets whether a buffer should clear.
 sidebar:
   label: Buffer Clear
   order: 3
