--- a/src/content/docs/reference/Constants/buffer_clear_color.mdx
+++ b/src/content/docs/reference/Constants/buffer_clear_color.mdx
@@ -1,6 +1,6 @@
 ---
 title: Buffer Clear Color
-description: Buffer Clear Color
+description: Sets the clear colour for a buffer.
 sidebar:
   label: Buffer Clear Color
   order: 3
