--- a/src/content/docs/reference/Constants/buffer_format.mdx
+++ b/src/content/docs/reference/Constants/buffer_format.mdx
@@ -1,6 +1,6 @@
 ---
 title: Buffer Format
-description: Buffer Format
+description: Sets the format for a buffer.
 sidebar:
   label: Buffer Format
   order: 3
