--- a/src/content/docs/reference/Constants/centerDepthHalflife.mdx
+++ b/src/content/docs/reference/Constants/centerDepthHalflife.mdx
@@ -1,6 +1,6 @@
 ---
 title: centerDepthHalflife
-description: centerDepthHalflife
+description: Sets the half life (in ticks) for the transition time for centerDepthSmooth.
 sidebar:
   label: centerDepthHalflife
   order: 3
