--- a/src/content/docs/reference/Constants/colortex_mipmaps.mdx
+++ b/src/content/docs/reference/Constants/colortex_mipmaps.mdx
@@ -1,6 +1,6 @@
 ---
 title: Colortex Mipmaps
-description: Colortex Mipmaps
+description: Whether Iris should generate a mipmap chain for a buffer before a program.
 sidebar:
   label: Colortex Mipmaps
   order: 3
