--- a/src/content/docs/reference/Constants/drawbuffers.mdx
+++ b/src/content/docs/reference/Constants/drawbuffers.mdx
@@ -1,6 +1,6 @@
 ---
 title: DRAWBUFFERS
-description: DRAWBUFFERS Directive
+description: The legacy version of RENDERTARGETS. Controls which buffers a fragment program writes to.
 sidebar:
   label: DRAWBUFFERS
   order: 2
