--- a/src/content/docs/reference/Constants/entityShadowDistanceMul.mdx
+++ b/src/content/docs/reference/Constants/entityShadowDistanceMul.mdx
@@ -1,6 +1,6 @@
 ---
 title: entityShadowDistanceMul
-description: entityShadowDistanceMul
+description: Controls the bounds for entity shadows to be rendered.
 sidebar:
   label: entityShadowDistanceMul
   order: 3
