--- a/src/content/docs/reference/Constants/eyeBrightnessHalflife.mdx
+++ b/src/content/docs/reference/Constants/eyeBrightnessHalflife.mdx
@@ -1,6 +1,6 @@
 ---
 title: eyeBrightnessHalflife
-description: eyeBrightnessHalflife
+description: Sets the half life in ticks for the transition time for the eyeBrightnessSmooth uniform.
 sidebar:
   label: eyeBrightnessHalflife
   order: 3
