--- a/src/content/docs/reference/Constants/noiseTextureResolution.mdx
+++ b/src/content/docs/reference/Constants/noiseTextureResolution.mdx
@@ -1,6 +1,6 @@
 ---
 title: noiseTextureResolution
-description: noiseTextureResolution
+description: Sets the resolution for noiseTex.
 sidebar:
   label: noiseTextureResolution
   order: 3
