--- a/src/content/docs/reference/Constants/overview.mdx
+++ b/src/content/docs/reference/Constants/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Overview: constants"
-description: Overview
+description: Constants are used to configure various aspects of the shader pack.
 sidebar:
   label: Overview
   order: 1
