--- a/src/content/docs/reference/Constants/rendertargets.mdx
+++ b/src/content/docs/reference/Constants/rendertargets.mdx
@@ -1,6 +1,6 @@
 ---
 title: RENDERTARGETS
-description: RENDERTARGETS Directive
+description: Controls which buffers a fragment program writes to.
 sidebar:
   label: RENDERTARGETS
   order: 1
