--- a/src/content/docs/reference/Constants/shadowDistance.mdx
+++ b/src/content/docs/reference/Constants/shadowDistance.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowDistance
-description: shadowDistance
+description: Sets the radius of the shadow pass in blocks.
 sidebar:
   label: shadowDistance
   order: 3
