--- a/src/content/docs/reference/Constants/shadowDistanceRenderMul.mdx
+++ b/src/content/docs/reference/Constants/shadowDistanceRenderMul.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowDistanceRenderMul
-description: shadowDistanceRenderMul
+description: Sets the culling distance multiplier for the shadow pass.
 sidebar:
   label: shadowDistanceRenderMul
   order: 3
