--- a/src/content/docs/reference/Constants/shadowHardwareFiltering.mdx
+++ b/src/content/docs/reference/Constants/shadowHardwareFiltering.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowHardwareFiltering
-description: shadowHardwareFiltering
+description: Enables hardware shadow sampling (depth comparison mode) for shadowtex buffers.
 sidebar:
   label: shadowHardwareFiltering
   order: 3
