--- a/src/content/docs/reference/Constants/shadowIntervalSize.mdx
+++ b/src/content/docs/reference/Constants/shadowIntervalSize.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowIntervalSize
-description: shadowIntervalSize
+description: Sets the snapping interval for the shadow pass in blocks.
 sidebar:
   label: shadowIntervalSize
   order: 3
