--- a/src/content/docs/reference/Constants/shadowMapFov.mdx
+++ b/src/content/docs/reference/Constants/shadowMapFov.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowMapFov
-description: shadowMapFov
+description: Sets the FOV for the shadow pass.
 sidebar:
   label: shadowMapFov
   order: 3
