--- a/src/content/docs/reference/Constants/shadowMapResolution.mdx
+++ b/src/content/docs/reference/Constants/shadowMapResolution.mdx
@@ -1,6 +1,6 @@
 ---
 title: shadowMapResolution
-description: shadowMapResolution
+description: Sets the resolution for shadowtex and shadowcolor buffers.
 sidebar:
   label: shadowMapResolution
   order: 3
