--- a/src/content/docs/reference/Constants/shadow_mipmaps.mdx
+++ b/src/content/docs/reference/Constants/shadow_mipmaps.mdx
@@ -1,6 +1,6 @@
 ---
 title: Shadow Mipmaps
-description: Shadow Mipmaps
+description: Whether Iris should generate a mipmap chain for a shadowtex buffer.
 sidebar:
   label: Shadow Mipmaps
   order: 3
