--- a/src/content/docs/reference/Constants/sunPathRotation.mdx
+++ b/src/content/docs/reference/Constants/sunPathRotation.mdx
@@ -1,6 +1,6 @@
 ---
 title: sunPathRotation
-description: sunPathRotation
+description: Sets the angle rotation in degrees of the sun/moon perpendicular to their direction of travel.
 sidebar:
   label: sunPathRotation
   order: 3
