--- a/src/content/docs/reference/Constants/voxelDistance.mdx
+++ b/src/content/docs/reference/Constants/voxelDistance.mdx
@@ -1,6 +1,6 @@
 ---
 title: voxelDistance
-description: voxelDistance
+description: When shadow.culling is set to reversed in shaders.properties, a radius of voxelDistance will never be culled in the shadow pass.
 sidebar:
   label: voxelDistance
   order: 3
