--- a/src/content/docs/reference/Constants/workGroupsRender.mdx
+++ b/src/content/docs/reference/Constants/workGroupsRender.mdx
@@ -1,6 +1,6 @@
 ---
 title: workGroupsRender
-description: workGroupsRender
+description: Used to define number of work groups in a compute shader based on a multiple of the screen resolution.
 sidebar:
   label: workGroupsRender
   order: 3
