--- a/src/content/docs/reference/Macros/Driver_Vendor.mdx
+++ b/src/content/docs/reference/Macros/Driver_Vendor.mdx
@@ -1,6 +1,6 @@
 ---
 title: Driver Vendor
-description: Driver Vendor
+description: The vendor of the user's GPU driver.
 sidebar:
   label: Driver Vendor
   order: 1
