--- a/src/content/docs/reference/Macros/GPU_Hardware.mdx
+++ b/src/content/docs/reference/Macros/GPU_Hardware.mdx
@@ -1,6 +1,6 @@
 ---
 title: GPU Hardware
-description: GPU Hardware
+description: The user's GPU hardware.
 sidebar:
   label: GPU Hardware
   order: 1
