--- a/src/content/docs/reference/Macros/IRIS_HAS_CONNECTED_TEXTURES.mdx
+++ b/src/content/docs/reference/Macros/IRIS_HAS_CONNECTED_TEXTURES.mdx
@@ -1,6 +1,6 @@
 ---
 title: IRIS_HAS_CONNECTED_TEXTURES
-description: IRIS_HAS_CONNECTED_TEXTURES
+description: Whether a mod supporting connected textures is currently loaded.
 sidebar:
   label: IRIS_HAS_CONNECTED_TEXTURES
   order: 1
