--- a/src/content/docs/reference/Macros/IS_IRIS.mdx
+++ b/src/content/docs/reference/Macros/IS_IRIS.mdx
@@ -1,6 +1,6 @@
 ---
 title: IS_IRIS
-description: IS_IRIS
+description: Whether the shader is being loaded by Iris.
 sidebar:
   label: IS_IRIS
   order: 1
