--- a/src/content/docs/reference/Macros/MC_GLSL_VERSION.mdx
+++ b/src/content/docs/reference/Macros/MC_GLSL_VERSION.mdx
@@ -1,6 +1,6 @@
 ---
 title: MC_GLSL_VERSION
-description: MC_GLSL_VERSION
+description: The maximum GLSL version supported by the system.
 sidebar:
   label: MC_GLSL_VERSION
   order: 1
