--- a/src/content/docs/reference/Macros/MC_HAND_DEPTH.mdx
+++ b/src/content/docs/reference/Macros/MC_HAND_DEPTH.mdx
@@ -1,6 +1,6 @@
 ---
 title: MC_HAND_DEPTH
-description: MC_HAND_DEPTH
+description: The clip space depth multiplier applied to geometry in gbuffers_hand and gbuffers_hand_water`.
 sidebar:
   label: MC_HAND_DEPTH
   order: 1
