--- a/src/content/docs/reference/Macros/MC_TEXTURE_FORMAT_LAB_PBR.mdx
+++ b/src/content/docs/reference/Macros/MC_TEXTURE_FORMAT_LAB_PBR.mdx
@@ -1,6 +1,6 @@
 ---
 title: MC_TEXTURE_FORMAT_LAB_PBR
-description: MC_TEXTURE_FORMAT_LAB_PBR
+description: The texture format of the current resource pack.
 sidebar:
   label: MC_TEXTURE_FORMAT_LAB_PBR
   order: 1
