--- a/src/content/docs/reference/Macros/MC_VERSION.mdx
+++ b/src/content/docs/reference/Macros/MC_VERSION.mdx
@@ -1,6 +1,6 @@
 ---
 title: MC_VERSION
-description: MC_VERSION
+description: The current Minecraft version.
 sidebar:
   label: MC_VERSION
   order: 1
