--- a/src/content/docs/reference/Macros/Operating_System.mdx
+++ b/src/content/docs/reference/Macros/Operating_System.mdx
@@ -1,6 +1,6 @@
 ---
 title: Operating System
-description: Operating System
+description: The current operating system.
 sidebar:
   label: Operating System
   order: 1
