--- a/src/content/docs/reference/Macros/Render_Stages.mdx
+++ b/src/content/docs/reference/Macros/Render_Stages.mdx
@@ -1,6 +1,6 @@
 ---
 title: Render Stages
-description: Render Stages
+description: A list of possible render stages.
 sidebar:
   label: Render Stages
   order: 1
