--- a/src/content/docs/reference/Macros/Supported_Extensions.mdx
+++ b/src/content/docs/reference/Macros/Supported_Extensions.mdx
@@ -1,6 +1,6 @@
 ---
 title: Supported OpenGL Extensions
-description: Supported Extensions
+description: Which OpenGL extensions are supported by the csystem.
 sidebar:
   label: Supported Extensions
   order: 1
