--- a/src/content/docs/reference/Miscellaneous/block_properties.mdx
+++ b/src/content/docs/reference/Miscellaneous/block_properties.mdx
@@ -1,6 +1,6 @@
 ---
 title: block.properties
-description: block.properties
+description: Allows the shader to assign IDs to blocks and block entities.
 sidebar:
   label: block.properties
   order: 1
