--- a/src/content/docs/reference/Miscellaneous/dimension_properties.mdx
+++ b/src/content/docs/reference/Miscellaneous/dimension_properties.mdx
@@ -1,6 +1,6 @@
 ---
 title: dimension.properties
-description: dimension.properties
+description: Allows the shader to control which shader programs are loaded based on the dimension.
 sidebar:
   label: dimension.properties
   order: 2
