--- a/src/content/docs/reference/Miscellaneous/entity_properties.mdx
+++ b/src/content/docs/reference/Miscellaneous/entity_properties.mdx
@@ -1,6 +1,6 @@
 ---
 title: entity.properties
-description: entity.properties
+description: Allows the shader to assign IDs to entities.
 sidebar:
   label: entity.properties
   order: 1
