--- a/src/content/docs/reference/Miscellaneous/item_properties.mdx
+++ b/src/content/docs/reference/Miscellaneous/item_properties.mdx
@@ -1,6 +1,6 @@
 ---
 title: item.properties
-description: item.properties
+description: Allows the shader to assign IDs to items.
 sidebar:
   label: item.properties
   order: 1
