--- a/src/content/docs/reference/Mod/DH/dh_overview.mdx
+++ b/src/content/docs/reference/Mod/DH/dh_overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: Distant Horizons Overview
-description: An overview of DH
+description: An overview of how Distant Horizons integrates with Iris.
 sidebar:
   label: DH Overview
   order: 1
