--- a/src/content/docs/reference/Mod/DH/dh_shaders.mdx
+++ b/src/content/docs/reference/Mod/DH/dh_shaders.mdx
@@ -1,6 +1,6 @@
 ---
 title: Distant Horizons Compatible Shaders 
-description: All shaders that work with DH
+description: A list of shaders which are compatible with Distant Horizons.
 sidebar:
   label: Compatible Shaders
   order: 1
