--- a/src/content/docs/reference/Constants/drynessHalflife.mdx
+++ b/src/content/docs/reference/Constants/drynessHalflife.mdx
@@ -1,6 +1,6 @@
 ---
 title: drynessHalflife
-description: drynessHalflife
+description: Sets the half life in ticks for the transition from dry to wet weather for the wetness uniform.
 sidebar:
   label: drynessHalflife
   order: 3
