--- a/src/content/docs/reference/Constants/wetnessHalflife.mdx
+++ b/src/content/docs/reference/Constants/wetnessHalflife.mdx
@@ -1,6 +1,6 @@
 ---
 title: wetnessHalflife
-description: wetnessHalflife
+description: Sets the half life in ticks for the transition from wet to dry weather for the wetness uniform.
 sidebar:
   label: wetnessHalflife
   order: 3
