--- a/src/content/docs/reference/Constants/workGroups.mdx
+++ b/src/content/docs/reference/Constants/workGroups.mdx
@@ -1,6 +1,6 @@
 ---
 title: workGroups
-description: workGroups
+description: Used to define a fixed number of work groups in a compute shader.
 sidebar:
   label: workGroups
   order: 3
