--- a/src/content/docs/reference/Macros/IRIS_TAG_SUPPORT.mdx
+++ b/src/content/docs/reference/Macros/IRIS_TAG_SUPPORT.mdx
@@ -1,6 +1,6 @@
 ---
 title: IRIS_TAG_SUPPORT
-description: IRIS_TAG_SUPPORT
+description: Whether the version of iris supports tags for block IDs in block.properties.
 sidebar:
   label: IRIS_TAG_SUPPORT
   order: 1
