--- a/src/content/docs/guides/Beginners/first.mdx
+++ b/src/content/docs/guides/Beginners/first.mdx
@@ -1,6 +1,6 @@
 ---
 title: Your First Shader
-description: Get started creating your first shader
+description: Get started creating your first shader.
 sidebar:
   label: Your First Shader
   order: 1
