--- a/src/content/docs/guides/Beginners/start.mdx
+++ b/src/content/docs/guides/Beginners/start.mdx
@@ -1,6 +1,6 @@
 ---
 title: Getting Started
-description: All about shaders
+description: All about shaders.
 sidebar:
   label: Getting Started
   order: 0
