--- a/src/content/docs/how_to/pbr_standards.mdx
+++ b/src/content/docs/how_to/pbr_standards.mdx
@@ -1,6 +1,6 @@
 ---
 title: PBR Standards
-description: How to interpret PBR data provided by texture packs
+description: How to interpret PBR data provided by texture packs.
 ---
 
 Texture packs can optionally provide extra data to Iris through the use of normal and specular maps.
