--- a/src/content/docs/how_to/shadow_transforms.mdx
+++ b/src/content/docs/how_to/shadow_transforms.mdx
@@ -1,6 +1,6 @@
 ---
 title: Shadow Transforms
-description: Getting shadows into screen space
+description: Transforming in and out of shadow space.
 sidebar:
   label: Shadow Transforms
   order: 1
