--- a/src/content/docs/how_to/spaces.mdx
+++ b/src/content/docs/how_to/spaces.mdx
@@ -1,6 +1,6 @@
 ---
 title: Spaces
-description: All about the different spaces you will use
+description: The various different coordinate spaces you will work in when developing shaders.
 sidebar:
   label: Spaces
   order: 1
