--- a/src/content/docs/reference/Attributes/at_midBlock.mdx
+++ b/src/content/docs/reference/Attributes/at_midBlock.mdx
@@ -1,6 +1,6 @@
 ---
 title: at_midBlock
-description: at_midBlock
+description: The player space offset of the vertex's position from the centre of the block in 1/64th units, and optionally the light level emitted by the block.
 sidebar:
   label: at_midBlock
   order: 2
