--- a/src/content/docs/reference/Attributes/at_tangent.mdx
+++ b/src/content/docs/reference/Attributes/at_tangent.mdx
@@ -1,6 +1,6 @@
 ---
 title: at_tangent
-description: at_tangent
+description: The tangent vector to the normal in model space.
 sidebar:
   label: at_tangent
   order: 2
