--- a/src/content/docs/reference/Attributes/mc_Entity.mdx
+++ b/src/content/docs/reference/Attributes/mc_Entity.mdx
@@ -1,6 +1,6 @@
 ---
 title: mc_Entity
-description: mc_Entity
+description: The block ID and render type of the vertex.
 sidebar:
   label: mc_Entity
   order: 2
