--- a/src/content/docs/reference/Attributes/overview.mdx
+++ b/src/content/docs/reference/Attributes/overview.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Overview: attributes"
-description: Overview
+description: Attributes are per-vertex data available only in the vertex stage. 
 sidebar:
   label: Overview
   order: 1
