--- a/src/content/docs/reference/Attributes/vaNormal.mdx
+++ b/src/content/docs/reference/Attributes/vaNormal.mdx
@@ -1,6 +1,6 @@
 ---
 title: vaNormal
-description: vaNormal
+description: The normal vector in model space.
 sidebar:
   label: vaNormal
   order: 2
