--- a/src/content/docs/reference/Attributes/vaPosition.mdx
+++ b/src/content/docs/reference/Attributes/vaPosition.mdx
@@ -1,6 +1,6 @@
 ---
 title: vaPosition
-description: vaPosition
+description: The vertex position in model space.
 sidebar:
   label: vaPosition
   order: 2
