--- a/src/content/docs/reference/Attributes/vaUV2.mdx
+++ b/src/content/docs/reference/Attributes/vaUV2.mdx
@@ -1,6 +1,6 @@
 ---
 title: vaUV2
-description: vaUV2
+description: The block and sky lightmap UV coordinates.
 sidebar:
   label: vaUV2
   order: 2
