--- a/src/content/docs/reference/Buffers/colortex.mdx
+++ b/src/content/docs/reference/Buffers/colortex.mdx
@@ -1,6 +1,6 @@
 ---
 title: ColorTex
-description: ColorTex
+description: Color attachments which can be written to by the fragment stage of begin, prepare, gbuffers, deferred, and composite programs.
 sidebar:
   label: ColorTex
   order: 1
