--- a/src/content/docs/reference/Buffers/custom_textures.mdx
+++ b/src/content/docs/reference/Buffers/custom_textures.mdx
@@ -1,6 +1,6 @@
 ---
 title: Custom Textures
-description: Custom Textures
+description: Allows a custom texture to be bound to an existing sampler (such as a colortex).
 sidebar:
   label: Custom Textures
   order: 2
