--- a/src/content/docs/reference/Buffers/noisetex.mdx
+++ b/src/content/docs/reference/Buffers/noisetex.mdx
@@ -1,6 +1,6 @@
 ---
 title: NoiseTex
-description: NoiseTex
+description: Stores a generated RGB white noise texture.
 sidebar:
   label: NoiseTex
   order: 1
