--- a/src/content/docs/reference/Buffers/shadowcolor.mdx
+++ b/src/content/docs/reference/Buffers/shadowcolor.mdx
@@ -1,6 +1,6 @@
 ---
 title: ShadowColor
-description: ShadowColor
+description: Color attachments which can be written to by the shadow pass.
 sidebar:
   label: ShadowColor
   order: 1
