--- a/src/content/docs/reference/Buffers/shadowtex.mdx
+++ b/src/content/docs/reference/Buffers/shadowtex.mdx
@@ -1,6 +1,6 @@
 ---
 title: ShadowTex
-description: ShadowTex
+description: Depth buffers rendered in the shadow pass - usually from the perspective of the sun or moon.
 sidebar:
   label: ShadowTex
   order: 1
