--- a/src/content/docs/reference/Buffers/ssbo.mdx
+++ b/src/content/docs/reference/Buffers/ssbo.mdx
@@ -1,6 +1,6 @@
 ---
 title: SSBOs
-description: SSBOs
+description: Buffers that can store large amounts of data between shader invocations, and even between frames.
 sidebar:
   label: SSBOs
   order: 3
