--- a/src/content/docs/reference/Buffers/texture_format.mdx
+++ b/src/content/docs/reference/Buffers/texture_format.mdx
@@ -1,6 +1,6 @@
 ---
 title: Texture Format
-description: Texture Format
+description: Available texture formats for buffers.
 sidebar:
   label: Texture Format
   order: 4
