--- a/src/content/docs/reference/Attributes/mc_midTexCoord.mdx
+++ b/src/content/docs/reference/Attributes/mc_midTexCoord.mdx
@@ -1,6 +1,6 @@
 ---
 title: mc_midTexCoord
-description: mc_midTexCoord
+description: The texture UV coordinate of the center of the texture of the current quad.
 sidebar:
   label: mc_midTexCoord
   order: 2
@@ -12,6 +12,6 @@ sidebar:
 
 ---
 
-The texture uv coordinate of the center of the texture of the current quad.
+The texture UV coordinate of the center of the texture of the current quad.
 
 > ***Note***: this is calculated per quad, so for example when rendering a slab block `mc_midTexCoord` points to the center of the portion of the texture covered by the slab, not the center of the parent block's texture.
