feat: 1.8 beta changes

--- a/src/content/docs/reference/Macros/GPU_Hardware.mdx
+++ b/src/content/docs/reference/Macros/GPU_Hardware.mdx
@@ -14,4 +14,5 @@ Based on the current GPU hardware model, one of the following macros will be def
 - `MC_GL_RENDERER_INTEL`
 - `MC_GL_RENDERER_GALLIUM`
 - `MC_GL_RENDERER_MESA`
+- `MC_GL_RENDERER_APPLE` (currently only in Iris 1.8 beta)
 - `MC_GL_RENDERER_OTHER`
