--- a/src/content/docs/reference/Attributes/vaUV0.mdx
+++ b/src/content/docs/reference/Attributes/vaUV0.mdx
@@ -20,4 +20,11 @@ import { Aside } from '@astrojs/starlight/components';
 
 The vertex texture coordinate attribute, equivalent to `gl_MultiTexCoord0` from the compatibility profile.
 
-Usually the coordinate in `vaUV0` corresponds directly to the atlas texture coordinate, however some geometry (such as enchantment glint) requires the texture matrix. Therefore it is always recommended to use [`textureMatrix`](/reference/uniforms/matrices/texturematrix) (or `gl_TextureMatrix[0]` in the compatibility profile).
+Usually the coordinate in `vaUV0` corresponds directly to the atlas texture coordinate, however some geometry (such as enchantment glint) requires a texture matrix. Therefore it is always recommended to use [`textureMatrix`](/reference/uniforms/matrices/texturematrix) (or `gl_TextureMatrix[0]` in the compatibility profile) in [gbuffers-style](/reference/programs/overview/#program-order) programs.
+```glsl
+vec2 coord = (textureMatrix * vec4(vaUV0, 0.0, 1.0)).xy;
+```
+Equivalent to `gl_TextureMatrix[0]` in the compatibility profile and older GLSL versions.
+```glsl
+vec2 coord = (gl_TextureMatrix[0] * gl_MultiTexCoord0).xy;
+```
